--- a/landing.html
+++ b/landing.html
@@ -93,7 +93,7 @@ color: #0077b5;
     <div class="section">
         <h2>Social Accounts</h2>
         <p>Oracle  -->&nbsp;&nbsp; <button style="background-color:#4681f4;"> <a href="https://orcid.org/0009-0003-3069-5173">visit profile</a></button></p>
-         <p>github --> &nbsp;&nbsp; <button style="background-color:#4681f4;"><a href="https://github.com/Chandana9963;">visit profile</a></button></p>
+         <p>github --> &nbsp;&nbsp; <button style="background-color:#4681f4;"><a href="https://github.com/Chandana9963">visit profile</a></button></p>
 &nbsp;
 &nbsp;
 &nbsp;
